--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,8 +6,16 @@ $color-grey-light-1: #f7f7f7;
 $color-white: #f5f5f5;
 $color-black: rgb(12, 10, 10);
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
-$gutter-horizontal: 2rem;
+$gutter-horizontal: 6rem;
 
 $default-font-size: 1.6rem;
+
