--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,12 +8,13 @@
 @import "base/utilities";
 
 @import "pages/home";
+
 @import "components/button";
 @import "components/composition";
+@import "components/feature-box";
+@import "components/card";
 
 @import "layout/header";
- 
-
 @import "layout/grid";
 
 
