--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,7 +2,7 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-grey-dark: #777;
-$color-grey-light-1: #f7f7f7;
+
 $color-white: #f5f5f5;
 $color-black: rgb(12, 10, 10);
 
@@ -12,10 +12,11 @@ $color-secondary-dark: #ff7730;
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #d4cfcf;
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
 
 $default-font-size: 1.6rem;
-
