--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,27 +1,31 @@
 .section {
-  &-about {
-    color: $color-grey-light-1;
-    padding: 25rem 0;
-    margin-top: -20vh;
-  }
+   &-about {
+      color: $color-grey-light-1;
+      padding: 25rem 0;
+      margin-top: -20vh;
+   }
 
-  &-features {
-    padding: 20rem 0;
-    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)),
-      url(../img/nat-4.jpg);
-    background-size: cover;
+   &-features {
+      padding: 20rem 0;
+      background-image: linear-gradient(
+            to right bottom,
+            rgba($color-primary-light, 0.8),
+            rgba($color-primary-dark, 0.8)
+         ),
+         url(../img/nat-4.jpg);
+      background-size: cover;
 
-    transform: skewY(-7deg);
-    margin-top: -10rem;
+      transform: skewY(-7deg);
+      margin-top: -10rem;
 
-    & > * {
-      transform: skewY(7deg);
-    }
-  }
+      & > * {
+         transform: skewY(7deg);
+      }
+   }
 
-  &-tours {
-   color: $color-grey-light-1;
-   padding: 25rem 0 50rem 0;
-   margin-top: -10rem;
-  }
+   &-tours {
+      color: $color-grey-light-1;
+      padding: 25rem 0 50rem 0;
+      margin-top: -10rem;
+   }
 }
