Completion of Stories section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,4 +28,10 @@
       padding: 25rem 0 50rem 0;
       margin-top: -10rem;
    }
+
+   &-stories {
+      padding: 15rem 0;
+      background-color: rgb(226, 222, 222);
+      position: relative;
+   }
 }
