--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,10 @@ body {
   padding: 25rem 0 50rem 0;
   margin-top: -10rem; }
 
+.section-stories {
+  padding: 15rem 0;
+  background-color: #e2dede; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -343,6 +347,52 @@ body {
     box-shadow: 0 1rem 4rem rgba(40, 180, 133, 0.2); }
   .card__shadow-3 {
     box-shadow: 0 1rem 4rem rgba(86, 67, 250, 0.2); }
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(12, 10, 10, 0.15);
+  background-color: #f5f5f5;
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative;
+    overflow: hidden;
+    -webkit-shape-outside: circle(42% at 50% 50%);
+    shape-outside: circle(42% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%); }
+  .story__img {
+    height: 100%;
+    transform: scale(1.4);
+    transition: all 0.5s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #f5f5f5;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: scale(1);
+    filter: blur(3px) brightness(80%); }
 
 .header {
   height: 95vh;
