--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,91 +1,88 @@
-
 .btn {
    &:link,
    &:visited {
-     text-transform: uppercase;
-     text-decoration: none;
-     padding: 1.5rem 4rem;
-     display: inline-block;
-     border-radius: 20rem;
-     transition: all 0.3s;
-     position: relative;
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: 1.5rem 4rem;
+      display: inline-block;
+      border-radius: 20rem;
+      transition: all 0.3s;
+      position: relative;
    }
- 
+
    &:hover {
-     transform: translateY(-0.3rem);
-     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
- 
-     &::after {
-       transform: scaleX(1.4) scaleY(1.6);
-       opacity: 0;
-     }
+      transform: translateY(-0.3rem);
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+
+      &::after {
+         transform: scaleX(1.4) scaleY(1.6);
+         opacity: 0;
+      }
    }
- 
+
    &:active {
-     transform: translateY(-0.1rem);
-     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+      transform: translateY(-0.1rem);
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
    }
- 
+
    &--white {
-     background-color: $color-white;
-     color: $color-grey-dark;
- 
-     &::after {
-       background-color: $color-white;
-     }
+      background-color: $color-white;
+      color: $color-grey-dark;
+
+      &::after {
+         background-color: $color-white;
+      }
    }
    //
    &--green {
-     background-color: $color-primary;
-     color: $color-white;
- 
-     &::after {
-       background-color: $color-primary;
-     }
+      background-color: $color-primary;
+      color: $color-white;
+
+      &::after {
+         background-color: $color-primary;
+      }
    }
- 
+
    &::after {
-     content: '';
-     display: inline-block;
-     height: 100%;
-     width: 100%;
-     border-radius: 10rem;
-     position: absolute;
-     top: 0;
-     left: 0;
-     z-index: -1;
-     transition: all 0.4s;
+      content: '';
+      display: inline-block;
+      height: 100%;
+      width: 100%;
+      border-radius: 10rem;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      transition: all 0.4s;
    }
- 
+
    &--animated {
-     animation: moveInBottom 0.5s ease-out 0.75s;
-     animation-fill-mode: backwards;
+      animation: moveInBottom 0.5s ease-out 0.75s;
+      animation-fill-mode: backwards;
    }
- }
+}
 
- .btn-text {
+.btn-text {
+   &:link,
+   &:visited {
+      font-size: $default-font-size;
+      color: $color-primary-light;
+      display: inline-block;
+      text-decoration: none;
+      border-bottom: 0.1rem solid $color-primary;
+      padding: 0.3rem;
+      transition: all 0.2s;
+   }
 
-  &:link, &:visited {
-    font-size: $default-font-size;
-    color: $color-primary-light;
-    display: inline-block;
-    text-decoration: none;
-    border-bottom: 0.1rem solid $color-primary;
-    padding: 0.3rem;
-    transition: all 0.2s;
-  }
+   &:hover {
+      color: $color-white;
+      background-color: $color-primary;
+      box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+      transform: translateY(-4px);
+   }
 
-  &:hover{
-    color: $color-white;
-    background-color: $color-primary;
-    box-shadow: 0 1rem 2rem rgba($color-black, .2);
-    transform: translateY(-4px)
-  }
-
-  &:active{
-    box-shadow: 0 0.5rem 1rem rgba($color-black, .2);
-    transform: translateY(0)
-  }
-
-
- }
+   &:active {
+      box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+      transform: translateY(0);
+   }
+}
