--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,8 @@ body {
   margin-top: -10rem; }
 
 .section-stories {
-  padding: 15rem 0;
-  background-color: #e2dede; }
+  position: relative;
+  padding: 15rem 0; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -352,7 +352,7 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(12, 10, 10, 0.15);
-  background-color: #f5f5f5;
+  background-color: rgba(245, 245, 245, 0.6);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
@@ -393,6 +393,20 @@ body {
   .story:hover .story__img {
     transform: scale(1);
     filter: blur(3px) brightness(80%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden; }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 .header {
   height: 95vh;
