--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -4,4 +4,13 @@
     left: 0;
     height: 100%;
     width: 100%;
+    z-index: -1;
+    opacity: .15;
+    overflow: hidden;
+
+    &__content {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; //fill container while maintaining aspect ratio
+    }
 }
