--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,9 @@
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
+
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
 
 $color-white: #f5f5f5;
 $color-black: rgb(12, 10, 10);
