--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+   &,
    &:link,
    &:visited {
       text-transform: uppercase;
@@ -8,6 +9,11 @@
       border-radius: 20rem;
       transition: all 0.3s;
       position: relative;
+
+
+   //changes for button element
+   border: none;
+   cursor: pointer;
    }
 
    &:hover {
@@ -20,6 +26,7 @@
       }
    }
 
+   &:focus,
    &:active {
       transform: translateY(-0.1rem);
       box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
