--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,13 +1,31 @@
-
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+   margin: 0;
+   padding: 0;
+   box-sizing: inherit;
 }
 
 html {
-  font-size: 62.5%;
+   font-size: 62.5%;
+
+   // @include respond-phone {
+   //   font-size: 50%;
+
+   // @include respond (phone) {   not necessary as both geive 50%
+   //   font-size: 50%;
+   // }
+   @include respond(tab-port) {
+      font-size: 50%; // decide to make 1rem = 8px; 8/16 = 50%
+   }
+   @include respond(tab-land) {
+      font-size: 56.25%; //decide to make 1rem = 9px; 9/16 = 56.25%
+   }
+   @include respond(big-desktop) {
+      font-size: 75%; //decide to make 1rem = 12px; 12/16 = 75%
+   }
 }
 
+body {
+   box-sizing: border-box;
+}
