--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,5 +21,6 @@ $color-grey-light-2: #d4cfcf;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+$gutter-vertical-small: 6rem
 
 $default-font-size: 1.6rem;
